--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -4,15 +4,37 @@
     text-align: center;
     margin: auto;
     width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgb(235, 244, 244), rgb(136, 204, 250));
 
 }
+
+.toDoList {
+    display: flex;
+    flex-direction: column;
+   
+    align-items: center;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    
+
+}
+
 
 .btnLinks {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    background-color: rgb(94, 243, 181);
+    padding-right: 5px;
+  padding-bottom: 5px;
+  margin: 5px;
+  background: rgba(66, 194, 240, 0.41);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.5px);
+  -webkit-backdrop-filter: blur(6.5px);
     border-radius: 5px;
     width: 100px;
     text-decoration: none;
@@ -20,30 +42,80 @@
     border-style: solid ;
     margin-left: 5px;
 }
+.navBarContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  margin: 5px;
+  background: rgba(66, 194, 240, 0.21);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.5px);
+  -webkit-backdrop-filter: blur(6.5px);
+    margin: 5px;
+    width: 60%;
+    border-radius: 25px;
+    font-size: 30px;
+    border-width: 2px;
+
+}
+
+
 
 .navBar {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: bisque;
+    
     margin: 5px;
-    width: 60%;
+    width: 100%;
+    border-radius: 25px;
+    font-size: 30px;
 
 }
 .navBarItems {
     display: flex;
+    font-size: 2.5vh;
+  height: 60%;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  margin: 5px;
+  background: rgba(255, 255, 255, 0.21);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.5px);
+  -webkit-backdrop-filter: blur(6.5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+    
+    width: 200px;
+    
     justify-content: center;
     margin-left: 20px;
     text-decoration: none;
+    border-radius: 25px;
 }
 
 
 .toDoItems {
     display: flex;
+    
+    padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  margin: 5px;
+  background: rgba(216, 237, 245, 0.21);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.5px);
+  -webkit-backdrop-filter: blur(6.5px);
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(203, 234, 234);
+    
     border-radius: 25px;
     width: 60%;
     text-decoration: none;
@@ -56,7 +128,18 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(203, 234, 234);
+    font-size: 2vh;
+  height: 60%;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 26px;
+  margin: 5px;
+  background: rgba(255, 255, 255, 0.21);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.5px);
+  -webkit-backdrop-filter: blur(6.5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 25px;
     width: 60%;
     text-decoration: none;
